[tool.poetry]
name = "cboe-test"
version = "0.1.0"
description = ""
authors = ["Dima Tisnek <dimaqq@gmail.com>"]
license = "proprietary"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-xdist = "^3.3.1"
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
